fixed working form, gave more visibility for nav, fixed email link

--- a/src/components/MainNavbar.css
+++ b/src/components/MainNavbar.css
@@ -20,8 +20,8 @@ nav ul li {
     border-bottom: 1px solid lightgrey;
 }
 nav ul li:hover {
-    color: darkgrey;
-    border-bottom: 1px solid darkgrey;
+    color: #686868;
+    border-bottom: 1px solid #686868;
     transition: 0.5s ease-in;
 }
 .logo {
